# actuisense

./: .gitignore  CHANGELOG.md  CREDITS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
actuisense/: __init__.py  can.py  cli.py  device.py  pgndb.py  pgnfile.py  protocol.py  tui.py  wago.py
actuisense/data/: pgns.json
docs/reverse-engineering/bstft/: .gitattributes  PROTOCOL.md  bst_split.py  frame_sample.py  frames.txt  mdt_hdr.py
tests/: test_can.py  test_device.py  test_firmware.py  test_pgndb.py  test_pgnfile.py  test_protocol.py  test_tui.py  test_tui_connection.py  test_wago.py
tools/: gen_pgndb.py  gen_screenshot.py
